@@ -35,6 +35,9 @@ Brian Neal
 Dave Eckhardt
     Stream connection support.
 
+Zac Witte
+    OAUTH2 support.
+    
 Bug Reports
 ------------
 Brian Jackson
